tmp/svc-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-clusterip
  labels:
    app: app-kiatp-svc
spec:
  selector:
    app: app-kiatp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
