tmp/svc-loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-loadbalancer
spec:
  selector:
    app: app-kiatp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  type: LoadBalancer
